fix order in the sanity check example

--- a/assignments/assignment_2/assignment_2.ipynb
+++ b/assignments/assignment_2/assignment_2.ipynb
@@ -113,8 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# you can check that your function that returns the length is right for chromesome 21\n",
-    "assert(genome_length(chromosome_21_sequence) == 46709983)"
+    "# you can check that your function that returns the right length for chromesome 21\n",
+    "assert genome_length(chromosome_21_sequence) == 46709983, \"Incorrect length returned!\""
    ]
   },
   {
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "# a quick sanity check for your find_matches code, though try on subsequences within chr21!\n",
-    "find_matches(\"ACGT\",\"ACGTACGTACGT\")"
+    "find_matches(\"ACGTACGTACGT\",\"ACGT\")"
    ]
   },
   {
