--- a/assignments/assignment_3/assignment_3.ipynb
+++ b/assignments/assignment_3/assignment_3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,12 +318,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An example\n",
+    "\n",
+    "lets pretend there's an alien world where the bases are coded differently:\n",
+    "\n",
+    "Normal bases:\n",
+    "- __P__ pairs with __T__\n",
+    "- __K__ pairs with __L__\n",
+    "\n",
+    "Degenerate codes:\n",
+    "- __M__ codes for either __P__ or __T__\n",
+    "- __N__ codes for either __K__ or __L__\n",
+    "- __X__ codes for any base\n",
+    "\n",
+    "Like above, to help a friend out you've been asked to write a function that takes the degenerate coding, for instance the degenerate sequence __PM__ which could be either __PP__ or __PT__, and creates a regular expression that finds that sequence somewhere in a genome. Here's something you put together:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# I'd recommend some testing here for sure!!"
+    "def alien_restriction_regex_generator(sequence_pattern):\n",
+    "    resulting_alien_regex_string = ''\n",
+    "    \n",
+    "    for alien_base in sequence_pattern:\n",
+    "        if alien_base == 'P' or alien_base == 'T' or alien_base == 'K' or alien_base == 'L':\n",
+    "            resulting_alien_regex_string += alien_base\n",
+    "        if alien_base == 'M':\n",
+    "            resulting_alien_regex_string += '[PT]'\n",
+    "        if alien_base == 'N':\n",
+    "            resulting_alien_regex_string += '[KL]'\n",
+    "        if alien_base == 'X':\n",
+    "            resulting_alien_regex_string += '[PTKL]'\n",
+    "    \n",
+    "    compiled_regex = pattern = re.compile(resulting_alien_regex_string)\n",
+    "    \n",
+    "    return(compiled_regex)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the alien function\n",
+    "\n",
+    "Now that you've written your function, you want to test it in a number of different ways:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "re.compile('PT[PT][KL]')\n",
+      "found PTTK\n",
+      "found PTTL\n",
+      "did not find string matching the pattern\n"
+     ]
+    }
+   ],
+   "source": [
+    "alien_regex_for_PTMN = alien_restriction_regex_generator(\"PTMN\")\n",
+    "\n",
+    "# show what the resulting pattern looks like\n",
+    "print(alien_regex_for_PTMN)\n",
+    "\n",
+    "# this should result in match\n",
+    "match = alien_regex_for_PTMN.search(\"PTTK\")\n",
+    "if match:\n",
+    "  print('found', match.group())\n",
+    "else:\n",
+    "  print('did not find string matching the pattern')\n",
+    "\n",
+    "# this should also result in match\n",
+    "match = alien_regex_for_PTMN.search(\"PTTL\")\n",
+    "if match:\n",
+    "  print('found', match.group())\n",
+    "else:\n",
+    "  print('did not find string matching the pattern')\n",
+    "\n",
+    "\n",
+    "# this should NOT match\n",
+    "match = alien_regex_for_PTMN.search(\"PTKT\")\n",
+    "if match:\n",
+    "  print('found', match.group())\n",
+    "else:\n",
+    "  print('did not find string matching the pattern')"
    ]
   },
   {
