which part is homework

--- a/assignments/assignment_3/assignment_3.ipynb
+++ b/assignments/assignment_3/assignment_3.ipynb
@@ -308,10 +308,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Completing this function is your homework\n",
     "def restriction_regex_generator(sequence_pattern):\n",
     "    \n",
     "    return(compiled_regex) # you can call the variable whatever you'd like"
