update lecture for typo

--- a/lectures/lecture_4/lecture_and_assignment_4.ipynb
+++ b/lectures/lecture_4/lecture_and_assignment_4.ipynb
@@ -420,16 +420,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "5"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
     "    assert len(sequence1) == len(sequence2) # sequence length must be equal\n",
     "    \n",
     "    # [ do something ... for values in iterator]\n",
-    "    return(sum([1 if a != a else 0 for a,b in zip(sequence1.upper(),sequence2.upper())]))\n",
+    "    return(sum([1 if a != b else 0 for a,b in zip(sequence1.upper(),sequence2.upper())]))\n",
     "\n",
     "haming_distance_list_comp(human_histone_h1,cow_histone_h1)"
    ]
@@ -478,14 +478,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "363 ms ± 3.11 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "362 ms ± 4.04 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
