--- a/lectures/lecture_5/Lecture_5.ipynb
+++ b/lectures/lecture_5/Lecture_5.ipynb
@@ -672,7 +672,7 @@
     }
    },
    "source": [
-    "## At the end this DP matrix contains the maximum of all possible alignments\n",
+    "## This DP matrix with contain the maximum score for all possible alignments\n",
     "\n",
     "- For homework we're going to fill in this matrix, with lots of help\n",
     "\n",
