--- a/assignments/assignment_4/assignment_4.ipynb
+++ b/assignments/assignment_4/assignment_4.ipynb
@@ -143,16 +143,16 @@
     "    # first calculate if this is a match or mismatch and get the score\n",
     "    match_mismatch_score = match_score\n",
     "    if base_a != base_b:\n",
-    "        match_mismatch_score = # FILL IN CORREC VARIABLE HERE\n",
+    "        match_mismatch_score = # FILL IN CORRECT VARIABLE HERE\n",
     "    \n",
     "    # calculate the full upper diagonal score\n",
     "    full_diagonal_score = diagonal_score + match_mismatch_score\n",
     "    \n",
     "    # calculate the full score coming from the left cell\n",
-    "    full_left_score = left_score + # FILL IN CORREC VARIABLE HERE\n",
+    "    full_left_score = left_score + # FILL IN CORRECT VARIABLE HERE\n",
     "    \n",
     "    # calculate the full score coming from the above (upper) cell\n",
-    "    full_upper_score = upper_score + # FILL IN CORREC VARIABLE HERE\n",
+    "    full_upper_score = upper_score + # FILL IN CORRECT VARIABLE HERE\n",
     "    \n",
     "    # there are many ways to get the max value, here we're going to put them into an array and call max\n",
     "    return(max([full_diagonal_score,full_left_score,full_upper_score]))"
@@ -175,10 +175,10 @@
     "\n",
     "### first lets set the first row and column like in class\n",
     "for i in range(0,our_dp_matrix.shape[1]):\n",
-    "    our_dp_matrix[0,i] = i * # FILL IN CORREC VARIABLE HERE\n",
+    "    our_dp_matrix[0,i] = i * # FILL IN CORRECT VARIABLE HERE\n",
     "\n",
     "for i in range(0,our_dp_matrix.shape[0]):\n",
-    "    our_dp_matrix[i,0] = i * # FILL IN CORREC VARIABLE HERE\n",
+    "    our_dp_matrix[i,0] = i * # FILL IN CORRECT VARIABLE HERE\n",
     "  "
    ]
   },
