make it clear which line to uncomment

--- a/assignments/assignment_4/assignment_4.ipynb
+++ b/assignments/assignment_4/assignment_4.ipynb
@@ -223,7 +223,7 @@
     "                                          sequence_A[i - 1], \n",
     "                                          sequence_B[j - 1])\n",
     "        \n",
-    "        # **** uncomment and fill in this line\n",
+    "        # **** uncomment and fill in this next line:\n",
     "        # our_dp_matrix[FILL IN MATRIX POSITION HERE] = new_value"
    ]
   },
