add a random seed value and slightly better variable names

--- a/assignments/assignment_6/assignment_6.ipynb
+++ b/assignments/assignment_6/assignment_6.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -398,6 +398,8 @@
    "source": [
     "# lets keep it light and breezy, and do just 9M-10M of Chr21...\n",
     "chr21_9m_to_10m = chromosome_21_sequence[9000000:10000000]\n",
+    "\n",
+    "np.random.seed(0) # make sure the random.choice function always chooses the same sequence of random bases below\n",
     "\n",
     "# clean out any non ACGT bases\n",
     "chr21_9m_to_10m = [x if x in \"ACGT\" else np.random.choice([\"A\",\"C\",\"G\",\"T\"]) for x in chr21_9m_to_10m]\n",
@@ -424,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,13 +499,12 @@
     "    cpg_emission     = per_base_cpg_log[base_to_index(chr21_9m_to_10m[i])]\n",
     "    not_cpg_emission = per_base_not_log[base_to_index(chr21_9m_to_10m[i])]\n",
     "    \n",
-    "    best_weight_and_previous_score_to_CpG     = # see 1.1. and 1.2 above\n",
+    "    best_transition_and_previous_score_to_CpG     = # see 1.1. and 1.2 above\n",
     "    \n",
-    "    best_weight_and_previous_score_to_NOT_CpG = # adapt 1.1. and 1.2. above for transitioning to the non-CpG state\n",
+    "    best_transition_and_previous_score_to_NOT_CpG = # adapt 1.1. and 1.2. above for transitioning to the non-CpG state\n",
     "\n",
-    "    \n",
-    "    hmm_model[0,i] = best_weight_and_previous_score_to_CpG     + cpg_emission\n",
-    "    hmm_model[1,i] = best_weight_and_previous_score_to_NOT_CpG + not_cpg_emission\n",
+    "    hmm_model[0,i] = best_transition_and_previous_score_to_CpG     + cpg_emission\n",
+    "    hmm_model[1,i] = best_transition_and_previous_score_to_NOT_CpG + not_cpg_emission\n",
     "    \n",
     "    hmm_model_traceaback[0,i] = # 2.1. above\n",
     "    \n",
@@ -523,17 +524,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-596226.35965248 -596227.15524912 -596227.58748552 -596228.38308216\n",
-      " -596228.79561281]\n",
-      "[-596222.59452988 -596223.12360456 -596223.81142078 -596224.34049546\n",
-      " -596225.0304902 ]\n"
+      "[-596143.28760461 -596144.08320125 -596144.51543764 -596145.31103428\n",
+      " -596145.72356494]\n",
+      "[-596139.522482   -596140.05155668 -596140.73937291 -596141.26844759\n",
+      " -596141.95844233]\n"
      ]
     }
    ],
@@ -557,14 +558,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([0, 1]), array([ 75694, 924306]))\n",
+      "(array([0, 1]), array([ 75560, 924440]))\n",
       "\n",
       "We switched states: 86 times\n"
      ]
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -617,11 +618,11 @@
      "text": [
       "       CpG       not\n",
       "True     4881.0      35.0\n",
-      "False   70813.0  924271.0\n",
+      "False   70679.0  924405.0\n",
       "\n",
-      "accuracy : 0.929152\n",
+      "accuracy : 0.929286\n",
       "\n",
-      "positive predictive value (PPV): 0.06448331439744233\n"
+      "positive predictive value (PPV): 0.06459767072525145\n"
      ]
     }
    ],
